# odin-webhook-sentinel

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  cz.toml  dev-requirements.txt  pyproject.toml
.github/workflows/: auto-version.yml  ci.yml  codeql.yml  commit-lint.yml  helm.yml  release.yml
charts/sentinel/: Chart.yaml  values.yaml
charts/sentinel/templates/: _helpers.tpl  deployment.yaml  networkpolicy.yaml  service.yaml  servicemonitor.yaml
deploy/terraform/: README.md  main.tf
observability/: grafana-dashboard.json  prometheus-alerts.yaml
scripts/: bump_version.py  determine_next_version.py  dev_send_webhook.py
sentinel/: __init__.py  config.py  crypto.py  odin_client.py  verify.py
services/sentinel/: main.py
tests/: test_app.py  test_crypto.py  test_more_coverage.py  test_more_raise_coverage.py  test_unconfigured_and_cli.py  test_verify.py
