[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odin-webhook-sentinel"
version = "1.5.0"
description = "Verify webhooks (HMAC/Stripe/GitHub), compute CID, optionally forward signed ODIN envelope"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{ name = "ODIN", email = "opensource@odin.example"}]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.6.0",
  "httpx>=0.27.0",
  "cryptography>=43.0.1",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0","anyio>=4.0.0","ruff>=0.5.0","pytest-cov>=5.0.0","pre-commit>=3.7.0","prometheus-client>=0.20.0"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["dist","build","venv",".venv"]

[tool.ruff.lint]
select = ["F","E","W","I","B","UP","N","ASYNC"]
ignore = ["E501","N812"]  # Allow long lines; allow aliasing imports like verify as V
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[project.scripts]
odin-webhook-sentinel = "services.sentinel.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel*","services*"]
